| Bug #20022 | mysql-test-run can't be run with secure connections turned on for all testcases | ||
|---|---|---|---|
| Submitted: | 23 May 2006 11:26 | Modified: | 14 Jun 2006 7:52 |
| Reporter: | Magnus Blåudd | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Tests | Severity: | S3 (Non-critical) |
| Version: | 5.0 + 5.1 | OS: | Any (all) |
| Assigned to: | Magnus Blåudd | CPU Architecture: | Any |
[23 May 2006 11:26]
Magnus Blåudd
[29 May 2006 9:39]
Magnus Blåudd
Looks like this is caused by the "--ssl-verify-server-cert" option. In the mysql-test/include/master-slave.inc a connection is made to the master at 127.0.0.1 and as this differs from what it says in the server cert, the connection is rejected.
[31 May 2006 14:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/7096
[13 Jun 2006 9:13]
Magnus Blåudd
It works fine to run 5.0 with SSL turned on for all test cases on FC4
[14 Jun 2006 7:52]
Magnus Blåudd
It works fine to run 5.1 with SSL turned on for all test cases on FC4
