extra/yassl/include/openssl/crypto.h
@@ -3,6 +3,10 @@
 #ifndef ysSSL_crypto_h__
 #define yaSSL_crypto_h__
 
+#ifdef YASSL_PREFIX
+#include "prefix_crypto.h"
+#endif
+
 const char* SSLeay_version(int type);
 
 #define SSLEAY_VERSION 0x0900L
